# oreilly_olt_cpp_design_patterns

Solutions/: Makefile
Solutions/2_Cpp_Design_Patterns/: CMakeLists.txt
Solutions/2_Cpp_Design_Patterns/Adapter/: Adapter_2.cpp  CMakeLists.txt  LowerMatrix.cpp  Makefile  OptionalRefactoring_1.cpp  OptionalRefactoring_2.cpp  PyramidOfDoom.cpp
Solutions/2_Cpp_Design_Patterns/CRTP/: CMakeLists.txt  CRTP.cpp  CRTP_Concept.cpp  Makefile  StrongType_CRTP.cpp
Solutions/2_Cpp_Design_Patterns/Decorator/: CMakeLists.txt  Decorator_Allocator.cpp  Decorator_CppFanShop_1.cpp  Decorator_CppFanShop_2.cpp  Decorator_CppFanShop_3.cpp  Decorator_CppFanShop_CRTP.cpp  Decorator_Fantasy_1.cpp  Decorator_Fantasy_2.cpp  Decorator_PolicyBased.cpp  Makefile
Solutions/2_Cpp_Design_Patterns/Expression_Templates/: CMakeLists.txt  ExpressionTemplates_2.cpp  ExpressionTemplates_3.cpp  Makefile  Niebloid.cpp  Ranges.cpp
Tasks/: CMakeLists.txt
Tasks/2_Cpp_Design_Patterns/: Makefile
Tasks/2_Cpp_Design_Patterns/Adapter/: Adapter_1.cpp  Adapter_2.cpp  CMakeLists.txt  LowerMatrix.cpp  Makefile  OptionalRefactoring_1.cpp  OptionalRefactoring_2.cpp  PyramidOfDoom.cpp
Tasks/2_Cpp_Design_Patterns/CRTP/: CMakeLists.txt  CRTP.cpp  CRTP_Concept.cpp  DeducingThis.cpp  Makefile  Mixins.cpp  StaticInterfaces.cpp  StrongType_CRTP.cpp
Tasks/2_Cpp_Design_Patterns/Decorator/: CMakeLists.txt  Decorator_Allocator.cpp  Decorator_Benchmark.cpp  Decorator_CppFanShop.cpp  Decorator_CppFanShop_2.cpp  Decorator_Fantasy.cpp  Decorator_Static.cpp  Makefile  SynchronizedPool.cpp
Tasks/2_Cpp_Design_Patterns/Expression_Templates/: CMakeLists.txt  ExpressionTemplates.cpp  Makefile  Niebloid.cpp  Ranges.cpp  Ranges_Benchmark.cpp  Ranges_std.cpp
