#==================================================================================================
#
#  CMakeLists for chapter "C++ Design Patterns"
#
#  Copyright (C) 2015-2025 Klaus Iglberger - All Rights Reserved
#
#  This file is part of the C++ training by Klaus Iglberger. The file may only be used in the
#  context of the C++ training or with explicit agreement by Klaus Iglberger.
#
#==================================================================================================

cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

add_subdirectory(Adapter)
add_subdirectory(CRTP)
add_subdirectory(Decorator)
add_subdirectory(Expression_Templates)
